# file-to-markdown-convertor

./: .dockerignore  .env.example  .gitignore  Dockerfile  INITIATE.md  QUICKSTART.md  README.md  TESTING.md  bench_docling_standalone.py  bench_headtohead.py  bench_service_convert.py  bench_vlm.py  compare_matrix.py  compare_text_fidelity.py  docker-compose.yml  prefilter.py  pyproject.toml  run_all_tests.sh  run_timeout_tests.sh  run_worker_standalone.sh  start.sh  test_cleaning.py  test_docker.sh  test_real_pdfs.sh  test_standalone.sh  test_worker.sh
additional_tools/: README.md  bench_tatr.py  compare_chunkers.py  docling_chunk_test.py  eval_retrieval.py  gen_dbank_slice.py  probe_detect.py  probe_thinking.py  run_dbank_full.py  validate_dbank.py
app/: config.py  registry.py
app/api/: __init__.py  main.py
app/chunkers/: __init__.py  base.py  docling_hybrid.py
app/converters/: __init__.py  base.py  dbank.py  docling.py  marker.py  markitdown.py  pymupdf.py  vlm.py
app/workers/: __init__.py  chunk_server.py  worker.py  worker.py.backup
converted_files/: 439.md  440.md  441.md  442.md  443.md  447.md  447a.md  448_4-מונגש.md  449.md  450.md  451.md  452.md  453.md  454.md  455.md  460.md  461_2.md  h1967.md  h2091.md  h2172.md  h2417.md  h2504.md  h2669.md  h2690.md  h2716.md  h2781.md  h2813.md  h2833.md  simple.md
docs/archive/: CONFIGURATION.md  TEST_RESULTS.md  WORKER_FIX.md
tests/: README_TIMEOUT_TESTS.md  __init__.py  _timeout_targets.py  conftest.py  requirements-test.txt  test_chunk_api.py  test_converters.py  test_dbank.py  test_markdown_api.py  test_timeout_mechanism.py  test_worker.py
tests/files_to_convert/: test.docx
