[project]
name = "file-to-markdown-convertor"
version = "0.1.0"
description = "Centralized PDF to Markdown conversion service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn>=0.40.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyzmq>=26.0.0",
    "docling>=2.105.0",
    "docling-core>=2.75.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "pymupdf4llm>=0.0.0",
    "markitdown[all]>=0.0.0",
    "marker-pdf>=1.0.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "python-frontmatter>=1.0.0",
    "python-multipart>=0.0.22",
]

[tool.uv]
index-url = "https://pypi.org/simple"
index-strategy = "unsafe-best-match"
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"


[tool.uv.sources]
torch = { index = "pytorch-cpu" }


[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
